force-app/main/default/objects/Trolley_Recipient__c/Trolley_Recipient__c.object-meta.xml
<CustomObject>
    <label>Trolley Recipient</label>
    <nameField>
        <label>Trolley Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trolley Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>