force-app/main/default/objects/Trolley_Recipient__c/fields/Active_Payment_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Active_Payment_Account_ID__c</fullName>
    <label>Active Payment Account ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>