force-app/main/default/objects/Trolley_Recipient__c/fields/Estimated_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fee__c</fullName>
    <label>Estimated Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>