force-app/main/default/objects/Trolley_Recipient__c/fields/external_Id__c.field-meta.xml
<CustomField>
    <fullName>external_Id__c</fullName>
    <externalId>true</externalId>
    <label>external Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>