force-app/main/default/objects/Trolley_Recipient__c/fields/Non_Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Non_Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Torc User</label>
    <referenceTo>Non_Torc_User__c</referenceTo>
    <relationshipLabel>Trolley Recipients</relationshipLabel>
    <relationshipName>Trolley_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>