force-app/main/default/objects/Trolley_Recipient__c/fields/Payout_Method__c.field-meta.xml
<CustomField>
    <fullName>Payout_Method__c</fullName>
    <label>Payout Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>