force-app/main/default/objects/Trolley_Recipient__c/fields/referenceId__c.field-meta.xml
<CustomField>
    <fullName>referenceId__c</fullName>
    <label>referenceId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>