force-app/main/default/objects/Trolley_Recipient__c/fields/Torc_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Torc_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Torc External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>